# grocery-data-lake

./: AGENTS.md  API_USAGE_GUIDE.md  CHANGELOG.md  MVP2_PLAN.md  README.md  ROADMAP.md  VISUALIZATION_PLAN.md  mvp_next.md  pyproject.toml
app/: __init__.py
app/api_routes/: __init__.py  viz.py
dashboard/: index.html
dashboard-v2/: index.html  package-lock.json  package.json  strip-cors.js  vite.config.ts
dashboard-v2/src/: App.tsx  index.css
dashboard-v2/src/components/: Layout.tsx  ui.tsx
dashboard-v2/src/lib/: api.ts  types.ts
dashboard-v2/src/pages/: AlternativesPage.tsx  BrandsPage.tsx  CheapestPage.tsx  (+4 more)
dashboard/assets/: index-BTHGNZ3b.css  index-CB1Dx86a.js  index-bBUal3tn.js
grocery/: __init__.py  analytics.py  auth.py  bonus_analytics.py  bonus_scraper.py  category_analytics.py  client.py  config.py  database.py  db.py  enrich.py  health.py  intelligence.py  migrations.py  models.py  scraper.py  serving.py  unit_price.py
grocery/api/: analytics.py  app.py  bonus.py  categories.py  intelligence.py  price_history.py  products.py  raw_json.py  stats.py  viz.py
grocery/cli/: __init__.py  __main__.py  bonus.py  enrich.py  jobs.py  query.py  scrape.py  serve.py
grocery_data_lake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
references/: architecture-overview.md  business-propositions-analysis-2026-05-14.md  user-guide.md
stale/: README.md  __init__.py  database.py  repository.py  test_database.py  test_obscura_cdp.py  test_obscura_cdp2.py  test_smoke.py
tests/: conftest.py  test_intelligence_features.py  test_smoke.py
