[project]
name = "grocery-data-lake"
version = "0.1.0"
description = "Albert Heijn product data lake — scrape, store, query"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "tqdm>=4.66",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
grocery = "grocery.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grocery*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["stale", ".*", "build", "dist", "*.egg-info"]
